samples/_failures_safe/1761167342_64dbad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dafbc25c.c: In function ‘main’:
./samples/SAFE/__tmp_dafbc25c.c:149:9: error: expected declaration or statement at end of input
  149 |         if (scanf("%d", &choice) != 1) {
      |         ^~
./samples/SAFE/__tmp_dafbc25c.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dafbc25c.c:149:9: error: expected declaration or statement at end of input
